--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -477,4 +477,4 @@
     <script src="./js/modal.js"></script>
 
     </body>
-</html>
+</html> -->
